--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,9 @@
 {
-    "name": "bluepheasant/pos-system",
+    "name": "bluepheasant/bkphones",
     "authors": [
         {
             "name": "VO QUY LONG",
             "email": "long.vo2k1@hcmut.edu.vn"
-        },
-        {
-            "name": "VU NHAT NAM",
-            "email": "nhatnam@hcmut.edu.vn"
         }
     ],
     "require": {
