--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,5 @@ jobs:
             git fetch origin master
             git reset --hard FETCH_HEAD
             git clean -d -f --exclude secrets
-            docker-compose down
-            docker-composer build
-            docker-composer up
+            docker-compose down && docker-composer build && docker-composer up
             chown $(whoami) . # PM2 doesn't recognize root user from Github Actions
