--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 DB_DSN=mysql:host=db;port=3306;dbname=php_mvc
 DB_USER=php_mvc
 DB_PASSWORD=php_mvc
+
+
+DB_DSN=mysql:host=103.175.198.110;port=3306;dbname=test
+DB_USER=root
+DB_PASSWORD=cohota
